--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,5 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Rubik+Mono+One&display=swap');
